# aruco-opencv-android

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tuielectronics/aruco_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cameraOpenCV.cpp
app/src/main/cpp/include/aruco3/: marker.cpp
app/src/main/cpp/include/opencv2/core/: cvstd.inl.hpp
app/src/main/java/com/tuielectronics/aruco_demo/: CameraProcess.java  MainActivity.java  MessageEvent.java  UIEvent.java
app/src/main/java/com/tuielectronics/aruco_demo/ui/dashboard/: DashboardFragment.java  DashboardViewModel.java
app/src/main/java/com/tuielectronics/aruco_demo/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/com/tuielectronics/aruco_demo/ui/notifications/: NotificationsFragment.java  NotificationsViewModel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tuielectronics/aruco_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
